--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-project",
+  "name": "gym-typescript",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.9.2",
+    "@types/node": "^20.9.3",
     "@types/react": "^18.2.37",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.2.15",
